[tool.poetry]
name = "fastapi-tutorial-at-pycon"
version = "0.1.0"
description = ""
authors = ["raccoony <raccoonyy@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial_at_pycon"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
requests = "^2.31.0"
uvicorn = "^0.23.2"
aiofiles = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
